# Rust_projects

./: README.md
Note_taking_app/: Cargo.toml
Note_taking_app/src/: main.rs
Task_Tracker/: Cargo.toml
Task_Tracker/src/: main.rs
my_first_prj/: .gitignore  Cargo.toml
my_first_prj/src/: API_for_news.rs  fizzbuzz.rs  main.rs
server/: Cargo.toml
server/src/: index.html  lib.rs  main.rs  main_.rs
server/static_page/: 401.html  404.html  Maintanence_page.html  dashboard.js  index.html  login.html  register.html  style.css
web_fuzzer/: Cargo.toml
web_fuzzer/src/: main.rs
