[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["runtime-async-std", "macros"] }
async-std = { version = "1.10", features = ["attributes"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7.10"
futures-util = "0.3.17"
reqwest = "0.11.6"
chrono = "0.4.19"
failure = "0.1.8"
